--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
+*{
+  text-align: center;
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+
+#header {
+  text-align: center;
+}
+
+#caption {
+  font-size: 10px;
+}
+
+.nav {
+  padding-right: 10px;
+  padding-left: 10px;
+  background: pink;
+}
+
+  p {
+  text-align: center;
+
+}
+
+
+
+
+
+
+
